# okkie

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  LICENSE.rst  MANIFEST.in  environment.yaml  pyproject.toml  ruff.toml  setup.cfg  setup.py
dev/testing/.ipynb_checkpoints/: stat_test_testing-checkpoint.ipynb
okkie/: __init__.py  link.py
okkie/astro/: __init__.py  physical_models.py  pulsar.py
okkie/astro/tests/: test_pulsar.py
okkie/data/test/: J0614-3329_NRT.par  J0633+0632_LAT.par  __init__.py
okkie/datasets/: __init__.py  counts.py  events.py
okkie/fix/: __init__.py  fix_gammapy.py
okkie/makers/: phase_makers.py
okkie/modeling/models/: __init__.py  decorators.py  extra.py  generic.py  integral.py  luminosity.py  phase.py  source.py  spectral.py  utils.py
okkie/modeling/models/tests/: test_integral.py  test_phase.py
okkie/phase/: __init__.py  phase_makers.py
okkie/stats/: __init__.py  periodicity_tests.py  stat_test_testing.ipynb
okkie/tests/: __init__.py  test_link.py
okkie/utils/: __init__.py  models.py
okkie/visualization/: __init__.py  phasogram.py
src/okkie/phase/: __init__.py  phase_makers.py  phasing.py
src/okkie/visualization/: phase_tests.py
tests/: test_integral.py
